syntax = "proto3";

package test.foo.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";

option go_package = "github.com/pentops/j5/gen/test/foo/v1/foo_testspb";

service FooService {
  rpc GetFoo(GetFooRequest) returns (GetFooResponse) {
    option (google.api.http) = {get: "/test/v1/foo/{id}"};
  }

  // PostFoo Comment
  rpc PostFoo(PostFooRequest) returns (PostFooResponse) {
    option (google.api.http) = {
      post: "/test/v1/foo"
      body: "*"
    };
  }

  rpc ListFoos(ListFoosRequest) returns (ListFoosResponse) {
    option (google.api.http) = {get: "/test/v1/foos"};
  }
}

// Leading GetFooRequest Comment
message GetFooRequest { // Comment on message line
  string id = 1;
  int64 number = 2;

  // Commant before numbers
  repeated float numbers = 3; // Comment on field line

  ABMessage ab = 4; // Comment on ab
  string multiple_word = 5;
}

// Multi
// Line
// Comment
message ABMessage {
  string a = 1;
  string b = 2;
}

// First Detached
// Multiline Comment

// Second Detached Comment

// GetFooResponse Comment
message GetFooResponse {
  string id = 1;
  string name = 2;
  string field = 3;
}

message PostFooRequest {
  string id = 1;
}

message PostFooResponse {
  string id = 1;
  string name = 2;
  string field = 3;
}

message ListFoosRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListFoosResponse {
  repeated Foo foos = 1;
}

message Foo {
  string id = 1;
  string name = 2 [(j5.list.v1.field).string.open_text.searching = {searchable: true}];

  Bar bar = 3;
}

message Bar {
  string id = 1 [(j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true];
  string field = 2 [(j5.list.v1.field).string.open_text.searching = {searchable: true}];
}
